[package]
name = "elev3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.0", features = ["jpeg"] }
bevy_flycam = { git = "https://github.com/sburris0/bevy_flycam" }
elev = { path = "../elev" }
clap = { version = "4.5.11", features = ["derive"] }
rayon = "1.10.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
